# 2324-DI-005-Race-to-the-Future

./: README.md
code/shared/ShooterDriver/: .gitignore  README.md  pyproject.toml
code/shared/ShooterDriver/src/shooterdriver/: __init__.py
code/shared/raspberrypi/: config.txt
code/team1/PirateShooter/: Makefile  ai_angles.py  driver.py  extractor.py  recorder_client.py  recorder_server.py  recorder_standalone.py  requirements.txt
code/team1/PirateShooter/recorder/: recorder.py
code/team1/PirateShooter/recorder/proto/: recorder_pb2.pyi  recorder_pb2_grpc.py
code/team1/PirateShooter/trainer/: about.md  ai_training.py  config.py
code/team2/PirateShooter/: .gitignore  README.md  driver.py  evdev_debug.py  extractor.py  recorder_client.py  recorder_server.py  recorder_standalone.py  requirements.txt  video_capture.py
code/team2/PirateShooter/protobuf/: recorder.proto
code/team2/PirateShooter/recorder/model/: datapoint.py
code/team2/PirateShooter/recorder/proto/: recorder_pb2.py
code/team2/PirateShooter/trainer/util/: utils.py
