[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shooterdriver"
version = "1.0.3"
authors = [
  { name="Jonas Claes", email="jonas@jonasclaes.be" },
]
description = "A library for controlling the T2M Shooter RC Car through Python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Thomas-More-Digital-Innovation/2223-DI-005-Race-To-The-Future"
"Bug Tracker" = "https://github.com/Thomas-More-Digital-Innovation/2223-DI-005-Race-To-The-Future/issues"